# ChangeLog for dev-tex/tex4ht
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/tex4ht/ChangeLog,v 1.22 2008/02/09 22:42:00 ranger Exp $

  09 Feb 2008; Brent Baude <ranger@gentoo.org> tex4ht-20071024_p0140.ebuild:
  Marking tex4ht-20071024_p0140 ppc64 for bug 208763

  08 Feb 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  tex4ht-20071024_p0140.ebuild:
  ppc stable, bug #208763

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  tex4ht-20071024_p0140.ebuild:
  alpha/ia64 stable wrt #208763

  05 Feb 2008; Ferris McCormick <fmccor@gentoo.org>
  tex4ht-20071024_p0140.ebuild:
  Sparc stable --- Bug #208763 --- required for texlive.

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> tex4ht-20071024_p0140.ebuild:
  Stable for HPPA (bug #208763).

  03 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  tex4ht-20071024_p0140.ebuild:
  stable x86, bug 208763

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org> tex4ht-20071024_p0140.ebuild:
  Marked ~hppa (bug #195815).

  06 Nov 2007; Markus Rothe <corsair@gentoo.org>
  tex4ht-20071024_p0140.ebuild:
  Added ~ppc64; bug #197543

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  tex4ht-20071024_p0140.ebuild:
  Add ~alpha/~ia64 wrt #197543

  30 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  tex4ht-20050406_p1623-r1.ebuild, tex4ht-20050701_p1825.ebuild:
  quote variables

*tex4ht-20071024_p0140 (30 Oct 2007)

  30 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  +tex4ht-20071024_p0140.ebuild:
  version bump, bug #153028, thanks to Gerard Vermeulen for the ebuild and
  wltjr for the help with java

  13 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  15 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  tex4ht-20050406_p1623-r1.ebuild:
  Stable on sparc
