@@ -1,9 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50tex4ht.cnf 192 RMD160 5b1858ef986eee4d9cc353e2147bee99938d7529 SHA1 6e7e561eb5bbf86dcd32b058e55cd5947e59e783 SHA256 5c9659aad7091b763e4a1363d78629a1ad8e1fe5ba679c151b95c69f4de9d9c1
-DIST tex4ht-1.0.2005_04_06_1623.tar.gz 1137268 RMD160 0f3e1ffd66e50540cae0e849c6d640ab572e098c SHA1 2846f28b9f0f32ffddb0cd6f54adb48507f8bd40 SHA256 f9a493a6473f8208b1cbe831a18eb3718d758f2a98bc96eaf6d5c1dfc221ed1e
-DIST tex4ht-1.0.2005_07_01_1825.tar.gz 1502237 RMD160 f516c83ef7c890d936761fe2e3156d07da906cbc SHA1 5f144eb120115169151d556757c92d2b3ea4a06f SHA256 85fc61befef44f9de7c7e06d0abd9645471aff5c9d3519e6da153b5bbd51c402
 DIST tex4ht-1.0.2007_10_24_0140.tar.gz 1946502 RMD160 3a6b35425c33c4430ab2ac344544bceb91ed7a9f SHA1 e4d2268aef585332b691ab14dfbda8c557610ac5 SHA256 e71b45195dc66d261b26ceb44a88890d4e87bdbebeaa0ca1f1ec10d55e4d0a44
-EBUILD tex4ht-20050406_p1623-r1.ebuild 1981 RMD160 7fe62f29d3f9a1423333b9a0183d2515b8810d5a SHA1 1fe5c23ae38d3d941cb06043b5955e42ed8099b8 SHA256 55eb5542f516dcee67c073d3d8e1e0e7c0653ed81e2e17854767b9fbf5ca6836
-EBUILD tex4ht-20050701_p1825.ebuild 1971 RMD160 88f56a2f49437f7c7c35d8814e7db388eb58f19c SHA1 f3fe9356bce969256b925cbd4e96cf1ecf46d3c3 SHA256 d02ef994573182b817a3838c9b4bde15d56ef777ca57b320167ef47a8e6c6a70
 EBUILD tex4ht-20071024_p0140.ebuild 3282 RMD160 b41b744d9fc9b6677ede1495ed7f312b7a0483bf SHA1 c776aa72020af95af0b519bedca033fb43ef5cf7 SHA256 a8eb4a31c572fe941b5222a4d26479e940e2f26f5c899e3cffb8ff13d64def68
-MISC ChangeLog 3609 RMD160 0009f18b0b5d0b38071a80d9c0be896a9c752f85 SHA1 94c666758e509d13906b48ed82a6797a0e0bee2b SHA256 e14df5ed6daff29d65cd4093f5590567a3bc7e6153cfecb1abd3ad2352407e5b
+MISC ChangeLog 3744 RMD160 77102bd994a4b2b5f8d2b1f86bc29fe821b70d95 SHA1 3c7ed6c82618d0fc569f93bd0abdb1f575b742de SHA256 e0f3c32e68518f387aca334b2b84004de949f5b1cf23a6c01698ba35f60c3a19
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHrulkvFcC4BYPU0oRAshDAJ9ZqWReCXHDsiJ2kBDMFDI2d7JAvgCgit8Z
++yB117fiRWZA+QSlWjc4ImE=
+=YdRx
+-----END PGP SIGNATURE-----
